Fix overflow

--- a/src/components/Hero.module.scss
+++ b/src/components/Hero.module.scss
@@ -15,6 +15,7 @@
 .oceanContainer {
   position: absolute;
   bottom: 0;
+  width: 100%;
 }
 
 .myself {
